cf_analysis_results/checkerframework_3.42.0_results_WPI/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8.txt
warning: (annotation.not.completed) $$ 2 $$ com.google.common.collect $$ @ParametersAreNonnullByDefault $$  $$ Element com.google.common.collect contains annotation @ParametersAreNonnullByDefault which can't be found. Make sure your classpath is set correctly.
warning: (annotation.not.completed) $$ 2 $$ com.google.common.collect.Table.get(java.lang.Object,java.lang.Object).arg0 $$ @Nullable $$  $$ Element com.google.common.collect.Table.get(java.lang.Object,java.lang.Object).arg0 contains annotation @Nullable which can't be found. Make sure your classpath is set correctly.
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/logic/PathsIter.java:63: error: (required.method.not.called) $$ 4 $$ method close $$ Preferences.getInstance().getOut() $$ java.io.PrintStream $$ regular method exit $$ ( 1767, 1801 ) $$ @MustCall method close may not have been invoked on Preferences.getInstance().getOut() or any of its aliases.
		if (null != Preferences.getInstance().getOut()) {
		                                            ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/logic/PathsIter.java:64: error: (required.method.not.called) $$ 4 $$ method close $$ Preferences.getInstance().getOut() $$ java.io.PrintStream $$ regular method exit $$ ( 1809, 1843 ) $$ @MustCall method close may not have been invoked on Preferences.getInstance().getOut() or any of its aliases.
			Preferences.getInstance().getOut()
			                                ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/util/operation/Logging.java:26: error: (required.method.not.called) $$ 4 $$ method close $$ Preferences.getInstance().getOut() $$ java.io.PrintStream $$ regular method exit $$ ( 627, 661 ) $$ @MustCall method close may not have been invoked on Preferences.getInstance().getOut() or any of its aliases.
		return new Logging(Preferences.getInstance().getOut(), caption);
		                                                   ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
warning: (annotation.not.completed) $$ 2 $$ com.google.common.base.CharMatcher.retainFrom(java.lang.CharSequence) $$ @CheckReturnValue $$  $$ Element com.google.common.base.CharMatcher.retainFrom(java.lang.CharSequence) contains annotation @CheckReturnValue which can't be found. Make sure your classpath is set correctly.
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/logic/BddCacheHavannah.java:91: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.PrintStream $$ regular method exit $$ ( 2783, 2836 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
		PrintStream out = Preferences.getInstance().getOut();
		            ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/logic/PathsRec.java:118: error: (required.method.not.called) $$ 4 $$ method close $$ Preferences.getInstance().getOut() $$ java.io.PrintStream $$ regular method exit $$ ( 3839, 3873 ) $$ @MustCall method close may not have been invoked on Preferences.getInstance().getOut() or any of its aliases.
		if (null != Preferences.getInstance().getOut()) {
		                                            ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/havannah/logic/PathsRec.java:119: error: (required.method.not.called) $$ 4 $$ method close $$ Preferences.getInstance().getOut() $$ java.io.PrintStream $$ regular method exit $$ ( 3881, 3915 ) $$ @MustCall method close may not have been invoked on Preferences.getInstance().getOut() or any of its aliases.
			Preferences.getInstance().getOut()
			                                ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/util/preferences/Preferences.java:84: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.PrintStream $$ regular method exit $$ ( 2588, 2623 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
		PrintStream out = parseOut(params);
		            ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/util/preferences/Preferences.java:264: error: (required.method.not.called) $$ 4 $$ method close $$ in $$ java.io.InputStream $$ possible exceptional exit due to new GameParser(in) with exception type com.strategy.util.GameParser.GameParserException $$ ( 7446, 7492 ) $$ @MustCall method close may not have been invoked on in or any of its aliases.
		InputStream in = new FileInputStream(hgfFile);
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to new GameParser(in) with exception type com.strategy.util.GameParser.GameParserException
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/util/Debug.java:26: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.PrintStream $$ regular method exit $$ ( 536, 589 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
		PrintStream out = Preferences.getInstance().getOut();
		            ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/util/TestMain.java:94: error: (required.method.not.called) $$ 4 $$ method close $$ new PrintStream("operations" + SIZE + ".log") $$ java.io.PrintStream $$ regular method exit $$ ( 3338, 3383 ) $$ @MustCall method close may not have been invoked on new PrintStream("operations" + SIZE + ".log") or any of its aliases.
				new PrintStream("operations" + SIZE + ".log"));
				^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlbf4fd38f68_rduerig_StrategyBDD_tgz-pJ8-com_strategy_util_TestMainJ8/src/com/strategy/util/TestMain.java:185: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.PrintStream $$ regular method exit $$ ( 6530, 6574 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
		PrintStream out = new PrintStream(filename);
		            ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
11 errors
3 warnings
